# learnCPP

./: .clang-format  README.md  feature.txt
GTest_Gmock/: 0_factorialtest.cpp  1_fifotest.cpp  CMakeLists.txt  README.md  queue-utils.h
ch0/: 0.13-0  0.13-0.cpp  hw  hw.cpp
ch1/: 1.10-0  1.10-0.cpp  1.11-0  1.11-0.cpp  1.4-0  1.4-0.cpp  1.4-1  1.4-1.cpp  1.5-0  1.5-0.cpp
ch10-Types/: README.md
ch11/: 11.x-2  11.x-2.cpp  README.md
ch11-Funtion-Templates/: 11.8-std-common-type.cpp  11.x-4.cpp  README.md
ch12/: 12.2-lvalue-rvalue  12.2-lvalue-rvalue.cpp  12.x-5  12.x-5.cpp  README.md  dangling-ptr.cpp  lvalue-x-ptr  std-optional  std-optional.cpp  type-ptr  type-ptr.cpp
ch13/: README.md  enum-bitset  io-op-overload.cpp
ch14/: 14.3-q1-q2  14.3-q1-q2.cpp  README.md
ch2/: 2.2-0  2.2-0.cpp
ch5/: 5.5-0  5.5-0.cpp  5.7-0  5.7-0.cpp  README.md  ub-sv
ch5-Constants-Constexpr/: 5.1-0.cpp  5.5-0.cpp  README.md
ch7/: 7.14  7.3-q1.cpp  README.md  accumulate-main.cpp  q1  q1.cpp
ch7-Namespaces-scope/: 7.14-inline-namespace.cpp  7.x-2  README.md  accumulate  constants.h
ch9-error-handling/: README.md
